# workflow_benchmark_makespan_estimator

./: CMakeLists.txt  README.md  get_flop_per_unit_of_work.sh
data/: blast-benchmark-200.json
include/: UnitParser.h  WfCommonsWorkflowParser.h
python/: process.py
src/: Estimator.cpp  UnitParser.cpp  WfCommonsWorkflowParser.cpp  cpu-benchmark.cpp
